objects/Quote_Line_Item_Clone__c.object
<CustomObject>
    <fields>
        <fullName>CW_Item_Description__c</fullName>
        <formula>Product__r.CW_Item_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <formula>Product__r.CW_Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMSSku__c</fullName>
        <formula>Product__r.DMMSSku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMMSSku</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ELC_Update__c</fullName>
        <label>ELC Update</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Method__c</fullName>
        <label>Fulfillment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Inventory</fullName>
                </value>
                <value>
                    <fullName>Core Inventory</fullName>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Contract SPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMU__c</fullName>
        <label>MMU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pdct_Total_Weight__c</fullName>
        <formula>Product__r.Package_Weight__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pdct Total Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Actual_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Line Item Clones</relationshipLabel>
        <relationshipName>Quote_Line_Item_Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_w_Shipping_Fees__c</fullName>
        <label>Products w/Shipping Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Clone__c</fullName>
        <label>Quote Clone</label>
        <referenceTo>Quote_Clone__c</referenceTo>
        <relationshipLabel>Quote Line Item Clones</relationshipLabel>
        <relationshipName>Quote_Line_Item_Clones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requires_Handling_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Handling Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <formula>Product__r.SKU_Ship_Via__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Via</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>Product__r.CW_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Record</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Item Clones</relationshipLabel>
        <relationshipName>Quote_Line_Item_Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>RH Quote Line Item</label>
    <nameField>
        <displayFormat>QLIC-{0}</displayFormat>
        <label>Quote Line Item Clone Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RH Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>